# libsearpc

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  INSTALL  LICENSE.txt  Makefile.am  Makefile.in  README  README.markdown  aclocal.m4  autogen.sh  config.h.cmake  config.h.in  configure  configure.ac  fcall-impr.h  libsearpc.pc.in  libsearpc.sln  libsearpc.vcxproj  libtool  searpc-dfun.h  searpc-fcall.h  searpc-marshal.h  searpc-signature.h  setup.py.cmake  vcpkg.json
cmake/: CTestConfig.cmake  MultiCPackConfig.cmake  README.txt  Welcome.txt  config-ix.cmake  config.h.in
cmake/Modules/: FindGLIB2.cmake  FindJANSSON.cmake
cmake/modules/: FindJansson.cmake
debian/: changelog  control  copyright  libsearpc-dev.install  libsearpc1.install  libsearpc1.symbols  python-searpc.install  python-searpc.lintian-overrides  rules
debian/patches/: fix-pkgconfig-paths.patch
demo/: CMakeLists.txt  Makefile.am  demo-async-client.c  pysearpc-demo-client.py  rpc_table.py  searpc-demo-client.c  searpc-demo-packet.h  searpc-demo-server.c  test-object.c  test-object.h
json-glib/: .gitignore  ChangeLog  Makefile.am  NEWS  README  configure.ac
json-glib/json-glib/: Json-1.0.gir  Makefile.am  json-array.c  json-builder.c  json-builder.h  json-debug.c  json-debug.h  json-enum-types.c  json-enum-types.c.in  json-enum-types.h  json-enum-types.h.in  json-gboxed.c  json-generator.c  json-generator.h  json-glib.h  json-glib.symbols  json-gobject-private.h  json-gobject.c  json-gobject.h  json-gvariant.c  json-gvariant.h  json-marshal.c  json-marshal.list  json-node.c  json-object.c  json-parser.c  json-parser.h  json-path.c  json-path.h  json-reader.c  json-reader.h  json-scanner.c  json-scanner.h  json-serializable.c  json-types-private.h  json-types.h  json-version.h  json-version.h.in
json-glib/json-glib/tests/: Makefile.am  array.c  boxed.c  builder.c  generator.c  gvariant.c  node.c  object.c  parser.c  path.c  reader.c  serialize-complex.c  serialize-full.c  serialize-simple.c  stream-load.json
lib/: CMakeLists.txt  Makefile.am  gen-dfun-macro.py  gencode.py  libsearpc.pc.cmake  rpc_table.py  searpc-client.c  searpc-client.h  searpc-codegen.py  searpc-named-pipe-transport.c  searpc-named-pipe-transport.h  searpc-server.c  searpc-server.h  searpc-utils.c  searpc-utils.h  searpc.h
pysearpc/: Makefile.am  Makefile.in  __init__.py  client.py  fcallfret.c  named_pipe.py  pygencode.py  pysearpc-demo-client.py  pysearpc-gen-dfun-macro.py  pysearpc_transport.py  rpc_table.py  server.py  test_pysearpc.py  transport.py  utils.py
tests/: CMakeLists.txt  Makefile.am  Makefile.in  clar.c  main.c  rpc_table.py  searpc.c  test-searpc.c  test_pysearpc.py
tests/clar/: CMakeLists.txt
